# bindings-clp

./: LICENSE  README.md  bindings-clp.cabal  stack.yaml
examples/: example.hs
src/: Clp.hs  ClpM.hs
src/Bindings/: ClpCInterface.hs
