name:                bindings-clp
version:             0.0.0.0
synopsis:            Bindings for Linear Program Solver CLP
description:         Please see README.md
homepage:            https://github.com/mischel/bindings-clp#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Schaper
maintainer:          Michael Schaper
category:            FFI, Logic, Theorem Provers, Formal Methods
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Clp
    ClpM
    Bindings.ClpCInterface
  build-depends:
    base >= 4.7 && < 5,
    mtl,
    vector
  other-extensions:
    RecordWildCards
    GeneralizedNewtypeDeriving
  default-language:    Haskell2010
  extra-libraries:     Clp
  pkgconfig-depends:   clp >= 1.16.0
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mischel/bindings-clp

